feat: Atividade e Certificado